# RestaurantManager

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/models/: db_client_wrapper.rs  mod.rs  restaurant.rs  util.rs
backend/src/requests/: restaurant.rs
backend/src/sql/: init_tables.sql
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Footer.js  Header.js  Restaurant.js  RestaurantList.js
frontend/src/css/: App.css  Restaurant.css  RestaurantList.css
