[package]
name = "backend"
version = "0.1.0"
authors = ["Sooraj Karthik <soorajkarthik15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.3"
postgres-types = {version="0.1.1", features=["derive"]}
dotenv = "0.15.0"
rocket = "0.4.7"
rocket_contrib = "0.4.4"
rocket_cors = "0.5.1"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"